--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - "docker-volumes/mysql/data:/var/lib/mysql"
-      - "docker-volumes/mysql/conf.d:/etc/mysql/conf.d"
+      - "~/grasswort-env/docker-volumes/mysql/data:/var/lib/mysql"
+      - "~/grasswort-env/docker-volumes/mysql/conf.d:/etc/mysql/conf.d"
     environment:
       - MYSQL_ROOT_PASSWORD=1234567890
 
@@ -19,8 +19,8 @@ services:
     ports:
       - 6379:6379
     volumes:
-      - "docker-volumes/redis/data:/data"
-      - "docker-volumes/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf"
+      - "~/grasswort-env/docker-volumes/redis/data:/data"
+      - "~/grasswort-env/docker-volumes/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf"
     command:
       redis-server /usr/local/etc/redis/redis.conf
 
