--- a/metabase.yml
+++ b/metabase.yml
@@ -5,3 +5,8 @@ services:
     image: metabase/metabase:latest
     ports:
       - 3000:3000
+    volumes:
+      - "~/grasswort-env/docker-volumes/metabase/data:/metabase-data"
+    environment:
+      - MB_DB_FILE=/metabase-data/metabase.db
+
